<resources>
    <string name="app_name">آلاء</string>

    <!-- tabs -->
    <string name="alla">آلاء</string>
    <string name="search">جستجو</string>
    <string name="forum">فروم</string>
    <string name="profile">پروفایل</string>

    <!-- onboarding-->
    <string name="ob_header1">آموزش مجازی آلاء</string>
    <string name="ob_header2">مجری توسعه عدال آموزشی</string>
    <string name="ob_header3">فیلم های آموزشی نطام قدیم و جدید</string>


    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

    <string name="more">بیشتر</string>
    <string name="watch">تماشا</string>
    <string name="desc">
        این مبحث یکی دو تا سوال ازش طرح میشه تو کنکور، تا اونجا پیش رفتیم که توی نثر چقدر می تونه نکته های پیچیده ای وجود داشته باشه  اگر ما از روش درست استفاده نکنیم، اگر از روش درست استفاده کنیم چقدر آنچه که از دید دیگران پیچیده هست برای ما ساده هست، توجه به نقش نماها و توجه به گذر فعل و توجه به  حذف اجزاء جمله، حالا همین ها رو باید در بیت ها هم بتونیم اجرا کنیم  که این فقط از عهده شما بر میاد
    </string>
    <string name="ob_get_started">شروع کن</string>
    <string name="cancel">لغو</string>
    <string name="download">دانلود</string>

    <!-- setting -->
    <string name="settings">تنظیمات</string>
    <string name="setting_external_download">external_download</string>
    <string name="setting_title_external_download">دانلود</string>
    <string name="setting_summary_download">مایلید از دانلود منیجر داخلی استفاده کنید؟</string>
    <string name="setting_summary_get_notif_new_video">دریافت نوتیفیکیشن برای فیلم های جدید</string>
    <string name="setting_summary_get_notif_favorite_video">دریافت نوتیفیکیشن برای دروس محبوب</string>
    <string name="setting_summary_get_notif_product">دریافت نوتیفیکیشن برای محصولات</string>
    <string name="setting_summary_player_quality">انتخاب کیفیت فیلم</string>
    <string name="edit">ویرایش</string>
    <string name="notification">اعلانیه</string>
    <string name="messages">پیام ها</string>
    <string name="friend">دوستان</string>
    <string name="personalCode">کدملی</string>
    <string name="phone">شماره موبایل</string>
    <string name="more_comment">نظران بیشتر</string>
    <string name="login_to_account">ورود به حساب کاربری</string>
    <string name="player">پخش کننده</string>
    <string name="player_quality">player_quality</string>
    <string name="login_desc">برای ورود نیازی به ثبت نام نیست تنها شماره موبایل و کدملی خود را وارد نمایید.</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="twiceClick">برای خروج یکبار دیگر کلیک کنید</string>
    <string name="completeDownload">دانلود تکمیل شد!</string>
    <string-array name="player_quality_entries">
        <item>کیفیت عالی</item>
        <item>کیفیت خوب</item>
        <item>کیفیت متوسط</item>
    </string-array>

    <string-array name="player_quality_value">
        <item>HD_720</item>
        <item>hq</item>
        <item>240p</item>
    </string-array>


</resources>
